# rust-on-lambda-boilerplate

./: Cargo.toml  README.md
example_api/: Cargo.toml
hello/: Cargo.toml
infrastructure/: lambda.tf  main.tf  variables.tf
infrastructure/resource_function/: inputs.tf  main.tf  outputs.tf
lib/: Cargo.toml
lib/src/: post.rs
rest-post/: Cargo.toml
rest-post/src/: main.rs
